@@ -2,6 +2,7 @@
 - Ask on input parameters on stdin if an argument isn't provided
 - Protocol version set to 1.2
 - CLI uses DateTime.iso8601 to parse dates
+- Datetime parameters accept Time, DateTime and Date objects
 
 * Fri Nov 25 2016 - version 0.7.1
 - Do not require a concrete version of json
